# voffice

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-20-virtual-office.md
docs/superpowers/specs/: 2026-05-20-virtual-office-design.md
examples/: 01_hello_agent.py  02_custom_tool.py  03_multi_agent_debate.py  04_virtual_office_cli.py  05_virtual_office_web.py  _common.py  office_engine.py
scripts/: live_run.py
tests/: test_office_engine.py
voffice/: __init__.py  __main__.py  cli.py  engine.py  launcher.py  model.py  server.py
voffice/static/: index.html
web/: server.py
web/static/: app.js  style.css
